# lm-markdown

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
API/config/: index.html
API/language_models/: index.html
API/markdown/: index.html
API/scan/: index.html
API/tree/: index.html
API/utils/: index.html
About/: index.html
Handbook/Configuration/: index.html
Handbook/Interaction/: index.html
Handbook/PrepareRAG/: index.html
docs/: About.md  index.md
docs/API/: config.md  language_models.md  markdown.md  scan.md  tree.md  utils.md
docs/Handbook/: Configuration.md  Interaction.md  PrepareRAG.md
docs/img/: LMMarkdown.ai
lmm/: __init__.py
lmm/config/: __init__.py  config.py
lmm/language_models/: __init__.py  agent.py  base.py  kernels.py  lazy_dict.py  message_iterator.py  messages.py  prompts.py  tools.py
lmm/language_models/langchain/: __init__.py  adapter.py  kernel.py  kernels.py  message_iterator.py  model_factory.py  models.py  runnables.py
lmm/markdown/: __init__.py  blocks.py  blockutils.py  ioutils.py  parse_markdown.py  parse_yaml.py  tree.py  treeutils.py
lmm/models/: message_iterator.py  prompts.py
lmm/models/langchain/: __init__.py  models.py  runnables.py
lmm/scan/: __init__.py  chunks.py  scan.py  scan_keys.py  scan_messages.py  scan_rag.py  scan_split.py  scanutils.py
lmm/settings/: __init__.py  settings.py
lmm/utils/: __init__.py  hash.py  importpdfs.py  ioutils.py  logging.py
search/: search_index.json
tests/: test_blockutils.py  test_chunks.py  test_config.py  test_ioutils.py  test_ioutils_edge_cases.py  test_ioutils_improvements.py  test_kernels.py  test_langchain_kernel.py  test_langchain_model_factory.py  test_langchain_models.py  test_langchain_runnables.py  test_lazy_dict.py  test_markdown.md  test_markdown_ioutils.py  test_message_iterator.py  test_parse_markdown.py  test_parse_yaml.py  test_prompts.py  test_scan.py  test_scan_extended.md  test_scan_extended.py  test_scan_rag.py  test_scan_split.py  test_scanutils.py  test_settings.py  test_tree.py  test_treeutils.py
typings/lmm/config/: __init__.pyi  config.pyi
typings/lmm/markdown/: parse_yaml.pyi
typings/lmm/utils/: __init__.pyi  logging.pyi
