[project]
name = "lmm"
version = "0.1.0"
description = ""
authors = [
    {name = "Roberto Viviani",email = "roberto.viviani@uibk.ac.at"}
]
readme = "README.md"
requires-python = ">=3.11.0,<3.14.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "tomlkit (>=0.13.3,<0.14.0)",
    "langchain[anthropic,google-genai,mistralai,openai] (>=0.3.27,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = ["lmm/py.typed"]

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
pytest = "^8.4.1"
pyright = "^1.1.404"
mypy = "^1.17.1"

